--- a/src/scss/components/plants.scss
+++ b/src/scss/components/plants.scss
@@ -355,7 +355,7 @@
                 }
             }
         }
-        button {
+        a {
             // padding: 2rem 2.5rem;
             gap: 3.6rem;
             width: 100%;
@@ -413,6 +413,6 @@
         }
     }
     .video__icon svg:hover circle {
-        fill: #196BD1;
+        fill: #196bd1;
     }
 }
