--- a/src/scss/components/features.scss
+++ b/src/scss/components/features.scss
@@ -3,7 +3,9 @@
     width: 100%;
     min-height: 100vh;
     padding: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360)) 0;
-
+    @media (min-width: 2000px) {
+        min-height: 75vh;
+    }
     @media (max-width: 580px) {
         padding-bottom: 6.5rem;
     }
@@ -142,7 +144,7 @@
         position: relative;
         @media (max-width: 1024px) {
             display: none;
-         }
+        }
 
         .features__img-slide {
             min-width: 36.7rem;
@@ -155,7 +157,6 @@
                 min-width: auto;
                 aspect-ratio: 1 / 1;
             }
-           
         }
         .features__img-slide {
             position: absolute;
@@ -188,27 +189,27 @@
         }
     }
 
-        .swiper {
-    padding-bottom: 5rem;
-    margin: 0 auto;
-    padding-right: 2rem;
-}
+    .swiper {
+        padding-bottom: 5rem;
+        margin: 0 auto;
+        padding-right: 2rem;
+    }
 
     &__img-slide-hidden {
         border-radius: 1rem;
     }
 
-    .swiper .swiper-slide, .fraturesswiper .swiper-slide-prev {
+    .swiper .swiper-slide,
+    .fraturesswiper .swiper-slide-prev {
         opacity: 0;
     }
 
-    .fraturesswiper .swiper-slide-active, .fraturesswiper .swiper-slide-next {
+    .fraturesswiper .swiper-slide-active,
+    .fraturesswiper .swiper-slide-next {
         opacity: 1;
     }
 
     .fraturesswiper .swiper-slide-next {
         padding-top: 4rem;
     }
-
-
 }
