--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -6,7 +6,9 @@
     min-height: 100vh;
     padding-top: var(--intro-padding-top);
     padding-bottom: 10rem;
-
+    @media (min-width: 2000px) {
+        min-height: 76vh;
+    }
     @media (max-width: 992px) {
         align-items: stretch;
     }
