--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -84,16 +84,15 @@
         align-items: center;
         justify-content: space-between;
         cursor: pointer;
-        border: 1px solid #1B74E3;
+        border: 1px solid #1b74e3;
         &:hover {
-            background-color: #EFF6FF;
+            background-color: #eff6ff;
             border-color: #fff;
             color: var(--accent-primary-hover);
         }
         &:hover svg {
             stroke: var(--accent-primary-hover);
         }
-         
     }
 }
 
@@ -168,20 +167,29 @@ a:hover {
     }
 }
 
+@media (min-width: 2000px) {
+    section {
+        padding: 9rem 0 !important;
+    }
+}
 
 @media (min-width: 1681px) {
     h1 {
         font-size: 100px !important;
     }
-    h2,
-    .callback__content-container__second-mobile a {
+
+    h2 {
         font-size: 8.5rem !important;
     }
-    .callback__content-container__contacts-mobile a,
-    .callback__content-container__second-callback p,
-    .callback__content-container__first a {
-        font-size: 4rem !important;
-    }
+
+    // .callback__content-container__second-mobile a {
+    //     font-size: 8.5rem !important;
+    // }
+    // .callback__content-container__contacts-mobile a,
+    // .callback__content-container__second-callback p,
+    // .callback__content-container__first a {
+    //     font-size: 4rem !important;
+    // }
     .plant__inner_slider-thanks-text strong {
         font-size: 5.5rem !important;
     }
@@ -192,12 +200,10 @@ a:hover {
 }
 
 .form .button--light:hover {
-    color: #196BD1;
+    color: #196bd1;
     background: none;
-    border: 1px solid #196BD1;
+    border: 1px solid #196bd1;
 }
 .form .button--light:hover a {
-    color: #196BD1;
+    color: #196bd1;
 }
-
-
