--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -772,7 +772,7 @@
 </section>
 <section class="expert">
     <div class="wide-container">
-        <div class="expert__wrapper aos-init"data-aos="fade-right"data-aos-duration="600">
+        <div class="expert__wrapper ">
             <div class="expert__man "  >
                 <img src="img/person.png" alt="Профессионал">
             </div>
@@ -2378,7 +2378,7 @@
     </div>
 
 </section>
-<section class="callback aos-init" data-aos="zoom-in"data-aos-duration="1500">
+<section class="callback aos-init" data-aos="fade-up"data-aos-duration="700">
     <div class="wide-container">
         <div class="callback__wrapper">
             <div class="callback__content-container">
