--- a/src/partials/components/headertwink.hbs
+++ b/src/partials/components/headertwink.hbs
@@ -28,7 +28,7 @@
                     </ul>
                 </nav>
             </div>
-            <button data-src="#order" data-fancybox class="header__button button-ellipse">Оставить заявку</button>
+            <a href="#callback-modal" class="header__button button-ellipse">Оставить заявку</a>
         </div>
     </div>
     {{> menu-burger }}
