--- a/src/pages/services.hbs
+++ b/src/pages/services.hbs
@@ -1,4 +1,4 @@
-{{#extend "layout"}}
+{{#extend "layouttwink"}}
 {{#content "main"}}
 
 <section class="services">
@@ -11,117 +11,131 @@
                 <div class="services__block-text">
                      Сервисный центр предлагает клиентам стабильно высокий уровень обслуживания.  Основные принципы работы нашего персонала - оперативность, точность и профессионализм, подкрепленный многолетним опытом.
                 </div>
+                <div class="services__block-items">
+                    <div class="services__block-item">
+                        <span>3 года</span>
+                        <p>гарантия на модель «Умка»</p>
+                    </div>
+                     <div class="services__block-item">
+                        <span>2 дня</span>
+                        <p>срок экспресс ремонта</p>
+                    </div>
+
+                </div>
+                <div class="button">Записаться на ТО
+                   <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M35.8408 26.6748V8.33317C35.8408 7.41317 35.0942 6.6665 34.1742 6.6665H7.50749C6.58749 6.6665 5.84082 7.41317 5.84082 8.33317V33.3332L15.6892 28.4332L34.1825 28.3415C35.0992 28.3365 35.8408 27.5915 35.8408 26.6748Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M12.5068 12.7058H28.5068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M12.5068 21.906H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+<path d="M12.5068 17.3059H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+
+
+                </div>
             </div>
+            <div class="all__cards">
+                        <div class="all__cards__item now">
+                        <img src="img/hand.png" alt="">
+                        </div>
+                        <div class="all__cards__item">
+                            <img src="img/car.png" alt="">
+                        </div>
+                    </div>
            
         </div>
     </div>
 </section>
 
-<section class="callback">
+
+<section class="info">
     <div class="wide-container">
-        <div class="callback__wrapper">
-            <div class="callback__content-container">
-                <div class="callback__content-container__first">
-                    <h2>Свяжитесь
-                        с нами</h2>
-                    <a href="mailto:nms@sportlp.ru">nms@sportlp.ru</a>
-                    <p>420061, г. Казань, Оренбургский
-                        тракт, д. 160, офис 304</p>
-                </div>
-                <div class="callback__content-container__second">
-                    <div class="callback__content-container__second-mobile">
-                        <a href="tel:+78000008888">8 800 000-88-88</a>
-                        <div class="work-now">
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="5" cy="5" r="5" fill="white" />
-                            </svg>
-                            <p>Работаем сейчас</p>
-                        </div>
-                    </div>
-                    <div class="callback__content-container__second-expert">
-                        <div class="callback__content-container__second-expert-avatar">
-                            <img src="img/alena.png" alt="">
-                        </div>
-                        <div class="callback__content-container__second-expert-name">
-                            <div class="callback__content-container__second-expert-name-title">
-                                Алёна Аношина
-                            </div>
-                            <div class="callback__content-container__second-expert-name-description">
-                                Позвоните для консультации
-                                эксперту компании
-                            </div>
-                        </div>
-                        <button data-src="#order" data-fancybox
-                            class="callback__content-container__second-expert-name-hid-button">
-                            Заказать звонок
-                            <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M20.7057 18.7625L19.2394 17.2962C18.5069 16.5637 17.3194 16.5637 16.5882 17.2962L15.4357 18.4487C15.1782 18.7062 14.7882 18.7925 14.4557 18.6462C12.7857 17.915 11.1357 16.8062 9.66442 15.335C8.19942 13.87 7.09442 12.2275 6.36192 10.5637C6.20942 10.22 6.29817 9.81621 6.56442 9.54996L7.59692 8.51746C8.43567 7.67871 8.43567 6.49246 7.70317 5.75996L6.23692 4.29371C5.26067 3.31746 3.67817 3.31746 2.70192 4.29371L1.88692 5.10746C0.960671 6.03371 0.574421 7.36996 0.824421 8.69496C1.44192 11.9612 3.33942 15.5375 6.40067 18.5987C9.46192 21.66 13.0382 23.5575 16.3044 24.175C17.6294 24.425 18.9657 24.0387 19.8919 23.1125L20.7057 22.2987C21.6819 21.3225 21.6819 19.74 20.7057 18.7625V18.7625Z"
-                                    stroke="#1B74E3" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M13.25 6.73875C14.5387 6.72125 15.8337 7.19875 16.8175 8.1825" stroke="#1B74E3"
-                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M20.3525 4.64758C18.3912 2.68633 15.82 1.70508 13.25 1.70508" stroke="#1B74E3"
-                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M18.2602 11.7501C18.2777 10.4614 17.8002 9.16637 16.8164 8.18262"
-                                    stroke="#1B74E3" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M20.3516 4.64746C22.3128 6.60871 23.2941 9.17996 23.2941 11.75"
-                                    stroke="#1B74E3" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-
-                        </button>
-                    </div>
-                    <div class="callback__content-container__contacts-mobile">
-                        <a href="mailto:nms@sportlp.ru">nms@sportlp.ru</a>
-                        <p>420061, г. Казань, Оренбургский
-                            тракт, д. 160, офис 304</p>
-                    </div>
-                    <div class="callback__content-container__second-callback">
-                        <p>Закажите звонок</p>
-                        <form action="" data-parsley-focus="none" data-need-validation>
-                            <div class="callback__item">
-                                <input required type="text" id="name1" data-parsley-name><label for="name1">Ваше
-                                    имя</label>
-                            </div>
-                            <div class="callback__item">
-                                <input class="phone js-phone-input" required type="tel" id="name2"
-                                    data-parsley-phone><label for="name2">ваш телефон</label>
-                            </div>
-                            <button type="submit" class="button--light" data-fancybox data-src="#order">Отправить
-                                <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z"
-                                        stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                    <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M5 19.9998H9.33333" stroke="#1B74E3" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M3.33594 14.9998H9.33594" stroke="#1B74E3" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                            </button>
-                        </form>
-                        <div class="expert__agree">
-                            <div class="expert__agree-star">*</div>
-                            <div class="expert__agree-text">Нажимая кнопку «Отправить» вы соглашаетесь с <a
-                                    target="blank" href="#">политикой
-                                    конфиденциальности</a></div>
-
-                        </div>
-                    </div>
-                </div>
+        <div class="info__inner">
+            <div class="info__inner-content">
+               <div class="info__inner-title">
+               СЕРВИСНЫЙ ЦЕНТР «Умка» поможет восстановить автомобиль в максимально сжатые сроки, минимизировав ущерб Вашего бизнеса.
             </div>
+            <p>Современное оборудование и наличие нескольких тысяч оригинальных запчастей УМКИ позволяют быстро ликвидировать поломку и избежать долгого простоя транспортного средства.</p>
+        <ul>
+            <li>Первоклассные мастера выполняют ремонтные работы в кратчайшие сроки.</li>
+            <li>Наши клиенты получают гарантию 3 года на проведенные работыс применением только оригинальных деталей российского производителя УМКА.</li>
+            <li>В случае, если нужной запчасти нет на складе нашего сервиса,ее заказ и доставка выполняется в течение суток.</li>
+    
+         </ul>
         </div>
-    </div>
-</section>
+        <div class="all__three__elements-container">
+                    <div class="all__three__elements">
+                            <div class="all__three__image">
+                                <div class="all__three__one-more">
+                                <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M28.6601 20.7589H18.6602C17.6246 20.7589 16.7852 19.9195 16.7852 18.8839V13.125" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M5.625 13.125C5.625 8.98286 8.98286 5.625 13.125 5.625H31.875C36.0171 5.625 39.375 8.98286 39.375 13.125V31.875C39.375 36.0171 36.0171 39.375 31.875 39.375H13.125C8.98286 39.375 5.625 36.0171 5.625 31.875" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M5.26172 26.25H9.37425" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M3.36523 20.6421H9.37543" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <circle cx="27.1875" cy="30.9375" r="2.8125" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></circle>
+                                <path d="M13.125 13.125H17.6563C20.312 13.125 22.8128 14.3754 24.4063 16.5L26.4331 19.2025C26.7824 19.6682 27.2354 20.0463 27.7561 20.3066L31.6771 22.2671C32.9475 22.9023 33.75 24.2008 33.75 25.6212V28.5938C33.75 29.8882 32.7007 30.9375 31.4062 30.9375H30" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M24.375 30.9375H13.125" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                            </div>
+                            </div>
+                            <div class="all__three__container">
+                            <div class="all__three__elements_title">
+                                Выезд на место
+                            </div>
+                            <div class="all__three__elements_text">
+                                наш специалист выезжает
+                                и&nbsp;проводит обслуживание
+                            </div>
+                    </div>
+                    </div>
+                    <div class="all__three__elements">
+                        <div class="all__three__image">
+                             <div class="all__three__one-more">
+                              <svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5.625 33.75H15" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M15 39.375H9.375" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M22.5 39.375C31.8198 39.375 39.375 31.8198 39.375 22.5C39.375 13.1802 31.8198 5.625 22.5 5.625C13.1802 5.625 5.625 13.1802 5.625 22.5C5.63005 23.763 5.77992 25.0212 6.07166 26.25" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M30 23.4375H21.5625V13.125" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                                </div>
+                            </div>
+                            <div class="all__three__container">
+                        <div class="all__three__elements_title">
+                            до 2 часов
+                        </div>
+                        <div class="all__three__elements_text">
+                            время обнаружения
+                            проблемы
+                        </div>
+                        </div>
+                    </div>
+                    <div class="all__three__elements">
+                        <div class="all__three__image">
+                             <div class="all__three__one-more">
+                           <svg width="76" height="75" viewBox="0 0 76 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <rect x="0.84082" width="75" height="75" rx="37.5" fill="#F0F4FE"/>
+    <ellipse cx="49.5936" cy="42.1893" rx="6.56523" ry="6.56523" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M45.8428 47.5771V56.2583L49.5943 54.3825L53.3459 56.2583V47.5771" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M40.2158 54.3822H25.2096C23.1368 54.3822 21.458 52.7034 21.458 50.6307V24.3697C21.458 22.297 23.1368 20.6182 25.2096 20.6182H49.5947C51.6675 20.6182 53.3463 22.297 53.3463 24.3697V29.9971" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M28.9619 28.1215H45.8439" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M28.9619 35.6244H36.465" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M28.9619 43.1273H34.5893" stroke="#1B74E3" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
 
+                                </div>
+                            </div>
+                            <div class="all__three__container">
+                        <div class="all__three__elements_title">
+                        36 месяцев
+                        </div>
+                        <div class="all__three__elements_text">
+                           гарантийное обслуживаниена все оборудование
+                        </div>
+                        </div>
+                    </div>
+                </div>
+    </div>
+
+</section>
+ {{> form }}
 {{/content}}
 {{/extend}}
