--- a/src/partials/layouts/layouttwink.hbs
+++ b/src/partials/layouts/layouttwink.hbs
@@ -15,11 +15,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
     />
-     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-
+  
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -36,6 +33,8 @@
    {{!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> --}}
    {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> --}}
    <script src="https://parsleyjs.org/dist/parsley.js"></script>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 
     <link rel="stylesheet" href="css/styles.min.css" />
     <link rel="stylesheet" href="assets/backend/backend.css" />
@@ -62,6 +61,7 @@
             {{/block}}
         </main>
         {{> footer }}
+        {{> modals }}
         {{> ie-placeholder }}
         <script src="js/app.js"></script>
         <script src="assets/backend/backend.js"></script>
