--- a/src/pages/contacts.hbs
+++ b/src/pages/contacts.hbs
@@ -4,10 +4,10 @@
 <section class="contact__form">
  {{> form }}
  </section>
-<section class="map">
+<section class="map ">
     <div class="wide-container">
-        <div class="map__wrapper">
-            <h2>Работаем <br> по всей стране</h2>
+        <div class="map__wrapper map_contacts">
+            {{!-- <h2>Работаем <br> по всей стране</h2> --}}
         </div>
     </div>
 </section>
