--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -30,7 +30,7 @@
                             <use xlink:href="#time-icon"></use>
                         </svg>
                         <span class="intro__button-bottom-text">предложение ограничено</span>
-                        <span class="intro__button-bottom-timer" data-date='2022,05,06'><div id="hours"></div>:<div id="minutes"></div>:<div id="seconds"></div></span>
+                        <span class="intro__button-bottom-timer" data-date='2022,05,10'><div id="hours"></div>:<div id="minutes"></div>:<div id="seconds"></div></span>
                         <svg class="intro__button-bottom-bg">
                             <use xlink:href="#timer-bg"></use>
                         </svg>
@@ -159,7 +159,7 @@
         </div>
     </div>
 </section>
-<section class="features">
+<section class="features" id="features">
     <div class="container">
         <div class="features__wrapper">
             <ul class="features__list aos-init"data-aos="zoom-out"data-aos-duration="1000">
@@ -228,7 +228,7 @@
         </div>
     </div>
 </section>
-<section class="configure">
+<section class="configure" id="configure">
     <div class="wide-container">
         <div class="configure__wrapper">
             <div class="configure__graphic-column">
@@ -493,7 +493,7 @@
         </div>
     </div>
 </section>
-<section class="why">
+<section class="why" id="why">
     <div class="wide-container">
         <div class="why__wrapper">
             <div class="why__expert-title">
@@ -876,7 +876,7 @@
             </div>
         </div>
 </section>
-<section class="characters">
+<section class="characters" id="characters">
     <div class="wide-container">
         <div class="characters__wrapper">
             <div class="characters__block">
@@ -1969,7 +1969,7 @@
         </div>
     </div>
 </section>
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="wide-container">
         <div class="reviews__inner">
             <h2>Отзывы клиентов</h2>
