--- a/src/partials/components/header.hbs
+++ b/src/partials/components/header.hbs
@@ -12,11 +12,27 @@
             </button>
             <nav class="header__nav">
                 <ul class="header__menu">
-                    {{#each menu }}
+                    {{!-- {{#each menu }}
                         <li>
                             <a href="#" class="header__menu-item">{{this}}</a>
+                        </li> --}}
+                         <li>
+                            <a href="#features">Особенности</a>
                         </li>
-                    {{/each}}
+                         <li>
+                            <a href="#configure">Конфигурация</a>
+                        </li>
+                         <li>
+                            <a href="#characters">Характеристики</a>
+                        </li>
+                         <li>
+                            <a href="#reviews">Отзывы</a>
+                        </li>
+                        <li>
+                            <a href="contacts.html">Контакты</a>
+                        </li>
+                       
+                    {{!-- {{/each}} --}}
                 </ul>
             </nav>
             <a href="#callback-modal" class="header__button button-ellipse">Оставить заявку</a>
