--- a/src/partials/components/headertwink.hbs
+++ b/src/partials/components/headertwink.hbs
@@ -20,11 +20,15 @@
                 </button>
                 <nav class="header__nav">
                     <ul class="header__menu">
-                        {{#each menu }}
+                        {{!-- {{#each menu }}
                         <li>
                             <a href="#" class="header__menu-item">{{this}}</a>
                         </li>
-                        {{/each}}
+                        {{/each}} --}}
+                        <li> <a href="index.html"> О модели</a> </li>
+                        <li> <a href="services.html"> Сервис </a> </li>
+                        <li> <a href="media.html"> Медиагалерея </a> </li>
+                        <li> <a href="contacts.html"> Контакты </a> </li>
                     </ul>
                 </nav>
             </div>
