--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -35,3 +35,4 @@
 @import './components/media';
 @import './components/headertwink';
 @import './components/conctacts';
+@import './components/cookie';
