--- a/src/pages/media.hbs
+++ b/src/pages/media.hbs
@@ -6,7 +6,7 @@
         <div class="media__wrapper">
           <h1>Медиагалерея</h1>
         <div class="media__filter">
-          <button class="media__filter-btn btn_type_all button--light" data-filter="all">
+          <button class="media__filter-btn btn_type_all button--light" autofocus data-filter="all">
             Все
           </button>
           <button class="media__filter-btn btn_type_img button--light" data-filter="images">
@@ -21,6 +21,7 @@
             <div class="media__main-inner">
               <div class="card video">
                 <div class="cart__video">
+                    <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
                   <img src="./img/v1.png" alt="" />
                   <svg
                     width="56"
@@ -35,12 +36,14 @@
                       fill="white"
                     />
                   </svg>
+                  </a>
                 </div>
                 <p>Демонстрация ключевых функций</p>
               </div>
 
               <div class="card video">
                 <div class="cart__video">
+                     <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
                   <img src="./img/v5.png" alt="" />
                   <svg
                     width="56"
@@ -55,43 +58,45 @@
                       fill="white"
                     />
                   </svg>
+                  </a>
                 </div>
                 <p>Обзор УМКИ на базе УАЗ</p>
               </div>
               <div class="card images">
-                <img src="./img/5.png" alt="" />
+                <img data-fancybox src="./img/5.png" alt="" />
               </div>
               <div class="card images">
-                <img src="../img/2.png" alt="" />
+                <img data-fancybox src="../img/2.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/7.png" alt="" />
+                <img data-fancybox src="./img/7.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/7.png" alt="" />
+                <img data-fancybox src="./img/7.png" alt="" />
               </div>
 
               <div class="card images">
-                <img src="./img/8.png" alt="" />
+                <img data-fancybox src="./img/8.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/5.png" alt="" />
+                <img data-fancybox src="./img/5.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/6.png" alt="" />
+                <img data-fancybox src="./img/6.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/7.png" alt="" />
+                <img  data-fancybox src="./img/7.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/8.png" alt="" />
+                <img data-fancybox src="./img/8.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/9.png" alt="" />
+                <img data-fancybox src="./img/9.png" alt="" />
               </div>
               <div class="card video">
                 <div class="cart__video">
-                  <img src="./img/v3.png" alt="" />
+                   <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
+                  <img  src="./img/v3.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -105,17 +110,19 @@
                       fill="white"
                     />
                   </svg>
+                  </a>
                 </div>
                 <p>Видеообзор эксперта</p>
               </div>
 
               <div class="card images">
-                <img src="./img/10.png" alt="" />
+                <img data-fancybox src="./img/10.png" alt="" />
               </div>
 
               <div class="card video">
                 <div class="cart__video">
-                  <img src="./img/v3.png" alt="" />
+                    <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
+                  <img  src="./img/v3.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -129,23 +136,25 @@
                       fill="white"
                     />
                   </svg>
+                  </a>
                 </div>
                 <p>Обзор процесса эксплуатации</p>
               </div>
 
               <div class="card images">
-                <img src="./img/11.png" alt="" />
+                <img data-fancybox src="./img/11.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/9.png" alt="" />
+                <img data-fancybox src="./img/9.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/8.png" alt="" />
+                <img data-fancybox src="./img/8.png" alt="" />
               </div>
 
               <div class="card video">
                 <div class="cart__video">
-                  <img src="./img/v4.png" alt="" />
+                  <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
+                  <img  src="./img/v4.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -159,14 +168,15 @@
                       fill="white"
                     />
                   </svg>
+                  </a>
                 </div>
                 <p>Видео с производства</p>
               </div>
               <div class="card images">
-                <img src="./img/5.png" alt="" />
+                <img data-fancybox  src="./img/5.png" alt="" />
               </div>
               <div class="card images">
-                <img src="./img/5.png" alt="" />
+                <img data-fancybox src="./img/5.png" alt="" />
               </div>
             </div>
             <button id="loadMore" class="button--light">
@@ -217,7 +227,7 @@
       </div>
     </section>
    {{> form }}
-            <div id="order"  style="display: none; width: 500px;" class="popup ct">
+  <div id="order"  style="display: none; width: 500px;" class="popup ct">
     <div class="form form-style-1 hideLabels">
         <div class="form-header">
             <div class="form-head animate-top">
