--- a/src/partials/components/footer.hbs
+++ b/src/partials/components/footer.hbs
@@ -132,4 +132,8 @@
             </div>
           </div>
         </div>
+        <div id="cookie_notification" class="show">
+        <p>Используя данный сайт, вы даете согласие на использование файлов cookie, данных об IP-адресе и местоположении, помогающих нам сделать его удобнее для вас.</p>
+        <button class="button cookie_accept">Принять и закрыть</button>
+</div>
       </footer>
