--- a/src/partials/components/menu-burger.hbs
+++ b/src/partials/components/menu-burger.hbs
@@ -30,12 +30,20 @@
                                 {{/each}}
                             </ul>
                         </li>
-                        {{#each menuBurger }}
+                     
                             <li class="menu-burger__menu-item">
-                                <a href="#">{{this}}</a>
+                                <a href="/media.html">Медиагалерея</a>
                                 <div class="menu-burger__menu-item-underline"></div>
                             </li>
-                        {{/each}}
+                             <li class="menu-burger__menu-item">
+                                <a href="/services.html">Сервис</a>
+                                <div class="menu-burger__menu-item-underline"></div>
+                            </li>
+                             <li class="menu-burger__menu-item">
+                                <a href="/contacts.html">Контакты</a>
+                                <div class="menu-burger__menu-item-underline"></div>
+                            </li>
+                      
                     </ul>
                 </nav>
                 <div class="menu-burger__contacts">
