--- a/src/scss/components/media.scss
+++ b/src/scss/components/media.scss
@@ -1,8 +1,8 @@
 .media {
     padding: 14.8rem 0 12rem 0;
-     @media (max-width: 500px) {
-               padding: 8.6rem 0 6.5rem;
-        }
+    @media (max-width: 500px) {
+        padding: 8.6rem 0 6.5rem;
+    }
     h1 {
         font: var(--title-XL);
         font-size: var(--calc--title-XL);
@@ -13,13 +13,18 @@
             }
         }
     }
+    .button--light:focus {
+        background-color: #1b74e3;
+        color: #fff;
+    }
     .button--light {
         border: 1px solid #1b74e3;
         padding: 2rem 2.5rem;
+
         @media (max-width: 500px) {
-                padding: 1.2rem 2.2rem;
-                border-radius: 5px;
-                font-size: 2rem;
+            padding: 1.2rem 2.2rem;
+            border-radius: 5px;
+            font-size: 2rem;
         }
     }
     .hide {
@@ -29,23 +34,23 @@
         display: flex;
         gap: 1rem;
         @media (max-width: 500px) {
-                gap: 0.5rem;
+            gap: 0.5rem;
         }
     }
 
     .media__wrapper {
-        padding: 4.5rem 9.7rem 5.4rem 9.8rem;
+        padding: 4.5rem 9.7rem 0rem 9.8rem;
     }
-     @media (max-width: 1040px) {
+    @media (max-width: 1040px) {
         .media__wrapper {
-        padding: 4.5rem 4rem;
-         }
+            padding: 4.5rem 4rem;
+        }
     }
-     @media (max-width: 550px) {
+    @media (max-width: 550px) {
         .media__wrapper {
-      padding: 2.5rem 0.5rem;
-    border-radius: 5px;
-         }
+            padding: 2.5rem 0.5rem;
+            border-radius: 5px;
+        }
     }
 
     &__main-inner {
@@ -53,9 +58,9 @@
         -moz-column-count: 3;
         column-count: 3;
         gap: 2.5rem;
-        padding: 8rem 0;
-         @media (max-width: 500px) {
-               padding: 2.5rem 0;
+        padding: 8rem 0 0 0;
+        @media (max-width: 500px) {
+            padding: 2.5rem 0;
         }
     }
     .card {
@@ -86,7 +91,6 @@
         transform: translate(-50%, -50%);
         width: 55px;
         height: 55px;
-      
     }
 
     .cart__video:hover svg path {
@@ -106,6 +110,11 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin-top: 8rem;
+        :focus {
+            background-color: #196bd1;
+            color: #fff;
+        }
     }
     @media (max-width: 767px) {
         .media__main-inner {
@@ -132,12 +141,10 @@
         color: #fff;
     }
 
-   .cart__video:hover svg circle {
-       fill: #196BD1;
-   }
-    
+    .cart__video:hover svg circle {
+        fill: #196bd1;
+    }
 }
 .media .cart__video:hover svg path {
     fill: #fff;
 }
-
