--- a/src/scss/components/services.scss
+++ b/src/scss/components/services.scss
@@ -31,9 +31,11 @@
         @media (max-width: 1023px) {
             flex-direction: column;
             padding: 3.5rem;
+            gap: 5rem;
         }
-        @media (max-width: 533px) {
+        @media (max-width: 767px) {
             padding: 3.5rem 2rem;
+            padding-bottom: 7rem;
         }
     }
 
@@ -122,8 +124,8 @@
         width: 100%;
         height: 540px;
 
-        img {
-            height: 100%;
+        @media (max-width: 767px) {
+            height: unset;
         }
     }
 
