change bugrer menu

--- a/src/partials/components/menu-burger.hbs
+++ b/src/partials/components/menu-burger.hbs
@@ -32,15 +32,15 @@
                         </li>
                      
                             <li class="menu-burger__menu-item">
-                                <a href="/media.html">Медиагалерея</a>
+                                <a href="media.html">Медиагалерея</a>
                                 <div class="menu-burger__menu-item-underline"></div>
                             </li>
                              <li class="menu-burger__menu-item">
-                                <a href="/services.html">Сервис</a>
+                                <a href="services.html">Сервис</a>
                                 <div class="menu-burger__menu-item-underline"></div>
                             </li>
                              <li class="menu-burger__menu-item">
-                                <a href="/contacts.html">Контакты</a>
+                                <a href="contacts.html">Контакты</a>
                                 <div class="menu-burger__menu-item-underline"></div>
                             </li>
                       
