--- a/src/scss/components/configure-poster.scss
+++ b/src/scss/components/configure-poster.scss
@@ -48,7 +48,7 @@
                 font-size: 3rem;
             }
 
-            span {
+            span:last-child {
                 color: var(--accent-primary);
             }
         }
