--- a/src/pages/media.hbs
+++ b/src/pages/media.hbs
@@ -63,35 +63,35 @@
                 <p>Обзор УМКИ на базе УАЗ</p>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/5.png" alt="" />
+                <a data-fancybox href="./img/img3_big.jpg"><img  src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="../img/2.png" alt="" />
+                <a data-fancybox href="./img/img2_big.jpg"><img src="./img/2.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/7.png" alt="" />
+                <a data-fancybox href="./img/img10_big.jpg"><img src="./img/7.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/7.png" alt="" />
+                <a data-fancybox href="./img/img10_big.jpg"><img src="./img/7.png" alt="" /></a>
               </div>
 
               <div class="card images">
-                <img data-fancybox src="./img/8.png" alt="" />
+                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/5.png" alt="" />
+                <a data-fancybox href="./img/img3_big.jpg"><img src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/6.png" alt="" />
+                <a data-fancybox href="./img/img6_big.jpg"><img  src="./img/6.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img  data-fancybox src="./img/7.png" alt="" />
+                <a data-fancybox href="./img/img10_big.jpg"><img   src="./img/7.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/8.png" alt="" />
+                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/9.png" alt="" />
+                <a data-fancybox href="./img/img7_big.jpg"><img src="./img/9.png" alt="" /></a>
               </div>
               <div class="card video">
                 <div class="cart__video">
@@ -116,7 +116,7 @@
               </div>
 
               <div class="card images">
-                <img data-fancybox src="./img/10.png" alt="" />
+                <a data-fancybox href="./img/img11_big.jpg"><img src="./img/10.png" alt="" /></a>
               </div>
 
               <div class="card video">
@@ -142,13 +142,13 @@
               </div>
 
               <div class="card images">
-                <img data-fancybox src="./img/11.png" alt="" />
+                <a data-fancybox href="./img/img5_big.jpg"><img src="./img/11.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/9.png" alt="" />
+                <a data-fancybox href="./img/img7_big.jpg"><img src="./img/9.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/8.png" alt="" />
+                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
               </div>
 
               <div class="card video">
@@ -173,10 +173,10 @@
                 <p>Видео с производства</p>
               </div>
               <div class="card images">
-                <img data-fancybox  src="./img/5.png" alt="" />
+                <a data-fancybox href="./img/img3_big.jpg"><img  src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <img data-fancybox src="./img/5.png" alt="" />
+                <a data-fancybox href="./img/img3_big.jpg"><img src="./img/5.png" alt="" /></a>
               </div>
             </div>
             <button id="loadMore" class="button--light">
