--- a/src/scss/components/callback.scss
+++ b/src/scss/components/callback.scss
@@ -263,6 +263,7 @@
         top: -6px;
         background-color: #2f83eb;
         padding: 0 3px;
+        transform: translateY(0%);
     }
 
     &__item {
