--- a/src/scss/components/conctacts.scss
+++ b/src/scss/components/conctacts.scss
@@ -2,7 +2,7 @@
     padding-top: 13rem;
 }
 .map_contacts {
-    background-image: url(../img/map_con.png);
+    background-image: url(../img/map.png);
     min-height: 46.4vh;
     background-size: cover;
     @media (max-width: 533px) {
