--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -6,7 +6,7 @@
     --main-light-blue: #eff6ff;
 
     --accent-primary: #1b74e3;
-    --accent-primary-hover: #196bd1;
+    --accent-primary-hover: #185fb6;
     --accent-secondary: #ee8e1e;
 
     --bg-primary: #fcfdff;
